chore: improve orderbook error handling and move config to YAML
- Move max_tokens, timeout, rate_limit to config.yaml
- Add structured warning logs for orderbook fetch failures
- Remove stale TODO comments
- Improve error observability

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -30,3 +30,8 @@ fees:
 estimator:
   fair_value_source: "midpoint"  # midpoint, last_trade, or weighted
   min_edge_bps: 50
+
+orderbook:
+  max_tokens_per_cycle: 200
+  timeout_per_token: 2.0
+  rate_limit_delay: 0.05
